Bug 80562 Xprint does not support any other visuals than Xprt's default one... patch by Roland.Mainz@informatik.med.uni-giessen.de r=db48x sr=attinasi a=roc+moz